--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -634,7 +634,7 @@
   "pli-tv-kd11:16.2.0": "3.5 The group of eighteen on not to be lifted ",
   "pli-tv-kd11:16.2.1": "“When a monk has five qualities, a legal procedure of banishing him shouldn’t be lifted: ",
   "pli-tv-kd11:16.2.2": "he gives the full ordination; he gives formal support; he has a novice monk attend on him; he accepts being appointed as an instructor of the nuns; he instructs the nuns, whether appointed or not. ",
-  "pli-tv-kd11:16.2.4": "When a monk has another five qualities, a procedure of banishing him should not be lifted: ",
+  "pli-tv-kd11:16.2.4": "When a monk has another five qualities, a procedure of banishing him shouldn’t be lifted: ",
   "pli-tv-kd11:16.2.5": "he commits the same offense for which the Sangha did the procedure of banishing him; he commits an offense similar to the one for which the Sangha did the procedure of banishing him; he commits an offense worse than the one for which the Sangha did the procedure of banishing him; ",
   "pli-tv-kd11:16.2.6": "he criticizes the procedure; he criticizes those who did the procedure. ",
   "pli-tv-kd11:16.2.8": "When a monk has eight qualities, a procedure of banishing him should not be lifted: ",
