--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -637,12 +637,12 @@
   "pli-tv-kd11:16.2.4": "When a monk has another five qualities, a procedure of banishing him shouldn’t be lifted: ",
   "pli-tv-kd11:16.2.5": "he commits the same offense for which the Sangha did the procedure of banishing him; he commits an offense similar to the one for which the Sangha did the procedure of banishing him; he commits an offense worse than the one for which the Sangha did the procedure of banishing him; ",
   "pli-tv-kd11:16.2.6": "he criticizes the procedure; he criticizes those who did the procedure. ",
-  "pli-tv-kd11:16.2.8": "When a monk has eight qualities, a procedure of banishing him should not be lifted: ",
-  "pli-tv-kd11:16.2.9": "he cancels the observance-day ceremony of a regular monk; he cancels the invitation ceremony of a regular monk; he speaks to a regular monk to initiate a legal process against him; he makes accusations against a regular monk; he gets permission from a regular monk to correct him; he accuses a regular monk of an offense; he reminds a regular monk of an offense; he associates inappropriately with other monks.” ",
+  "pli-tv-kd11:16.2.8": "When a monk has eight qualities, a procedure of banishing him shouldn’t be lifted: ",
+  "pli-tv-kd11:16.2.9": "he cancels the observance-day ceremony of a regular monk; he cancels the invitation ceremony of a regular monk; he orders a regular monk in regard to an offense; he gives instructions to a regular monk from a position of authority; he gets permission from a regular monk to correct him; he accuses a regular monk of an offense; he reminds a regular monk of an offense; he associates inappropriately with other monks.” ",
   "pli-tv-kd11:16.2.11": "The group of eighteen on not to be lifted is finished. ",
   "pli-tv-kd11:16.2.12.0": "3.6 The group of eighteen on to be lifted ",
   "pli-tv-kd11:16.2.12.1": "“When a monk has five qualities, a legal procedure of banishing him should be lifted: ",
-  "pli-tv-kd11:16.2.13": "he does not give the full ordination; he does not give formal support; he does not have a novice monk attend on him; he does not accept being appointed as an instructor of the nuns; he does not instruct the nuns, whether appointed or not. ",
+  "pli-tv-kd11:16.2.13": "he doesn’t give the full ordination; he doesn’t give formal support; he doesn’t have a novice monk attend on him; he doesn’t accept being appointed as an instructor of the nuns; he doesn’t instruct the nuns, whether appointed or not. ",
   "pli-tv-kd11:16.2.15": "When a monk has another five qualities, a procedure of banishing him should be lifted: ",
   "pli-tv-kd11:16.2.16": "he doesn’t commit the same offense for which the Sangha did the procedure of banishing him; he doesn’t commit an offense similar to the one for which the Sangha did the procedure of banishing him; he doesn’t commit an offense worse than the one for which the Sangha did the procedure of banishing him; ",
   "pli-tv-kd11:16.2.17": "he doesn’t criticize the procedure; he doesn’t criticize those who did the procedure. ",
