--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -804,7 +804,7 @@
   "pli-tv-kd11:21.1.0": "4.4 The eighteen kinds of conduct ",
   "pli-tv-kd11:21.1.1": "“A monk who’s had a legal procedure of reconciliation done against himself should conduct himself properly. ",
   "pli-tv-kd11:21.1.2": "This is the proper conduct: ",
-  "pli-tv-kd11:21.1.3": "He should not give the full ordination. ",
+  "pli-tv-kd11:21.1.3": "He shouldn’t give the full ordination. ",
   "pli-tv-kd11:21.1.4": "He should not give formal support. ",
   "pli-tv-kd11:21.1.5": "He should not have a novice monk attend on him. ",
   "pli-tv-kd11:21.1.6": "He should not accept being appointed as an instructor of the nuns. ",
