--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -807,8 +807,8 @@
   "pli-tv-kd11:21.1.3": "He shouldn’t give the full ordination. ",
   "pli-tv-kd11:21.1.4": "He shouldn’t give formal support. ",
   "pli-tv-kd11:21.1.5": "He shouldn’t have a novice monk attend on him. ",
-  "pli-tv-kd11:21.1.6": "He should not accept being appointed as an instructor of the nuns. ",
-  "pli-tv-kd11:21.1.7": "Even if appointed, he should not instruct the nuns. ",
+  "pli-tv-kd11:21.1.6": "He shouldn’t accept being appointed as an instructor of the nuns. ",
+  "pli-tv-kd11:21.1.7": "Even if appointed, he shouldn’t instruct the nuns. ",
   "pli-tv-kd11:21.1.8": "He should not commit the same offense as the offense for which the Sangha did the procedure of reconciliation against him. ",
   "pli-tv-kd11:21.1.9": "He should not commit an offense similar to the offense for which the Sangha did the procedure of reconciliation against him. ",
   "pli-tv-kd11:21.1.10": "He should not commit an offense worse than the offense for which the Sangha did the procedure of reconciliation against him. ",
