--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -816,8 +816,8 @@
   "pli-tv-kd11:21.1.12": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd11:21.1.13": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:21.1.14": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
-  "pli-tv-kd11:21.1.15": "He should not speak to a regular monk to initiate a legal process against him. ",
-  "pli-tv-kd11:21.1.16": "He should not make accusations against a regular monk. ",
+  "pli-tv-kd11:21.1.15": "He shouldn’t order a regular monk in regard to an offense. ",
+  "pli-tv-kd11:21.1.16": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:21.1.17": "He should not get permission from a regular monk to correct him. ",
   "pli-tv-kd11:21.1.18": "He should not accuse a regular monk of an offense. ",
   "pli-tv-kd11:21.1.19": "He should not remind a regular monk of an offense. ",
