--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -818,8 +818,8 @@
   "pli-tv-kd11:21.1.14": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:21.1.15": "He shouldn’t order a regular monk in regard to an offense. ",
   "pli-tv-kd11:21.1.16": "He shouldn’t give instructions to a regular monk from a position of authority. ",
-  "pli-tv-kd11:21.1.17": "He should not get permission from a regular monk to correct him. ",
-  "pli-tv-kd11:21.1.18": "He should not accuse a regular monk of an offense. ",
+  "pli-tv-kd11:21.1.17": "He shouldn’t get permission from a regular monk to correct him. ",
+  "pli-tv-kd11:21.1.18": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd11:21.1.19": "He should not remind a regular monk of an offense. ",
   "pli-tv-kd11:21.1.20": "He should not associate inappropriately with other monks.” ",
   "pli-tv-kd11:21.1.21": "The eighteen kinds of conduct in regard to the legal procedure of reconciliation are finished. ",
