--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -820,7 +820,7 @@
   "pli-tv-kd11:21.1.16": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:21.1.17": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:21.1.18": "He shouldn’t accuse a regular monk of an offense. ",
-  "pli-tv-kd11:21.1.19": "He should not remind a regular monk of an offense. ",
+  "pli-tv-kd11:21.1.19": "He shouldn’t remind a regular monk of an offense. ",
   "pli-tv-kd11:21.1.20": "He should not associate inappropriately with other monks.” ",
   "pli-tv-kd11:21.1.21": "The eighteen kinds of conduct in regard to the legal procedure of reconciliation are finished. ",
   "pli-tv-kd11:22.1.1": "Soon afterwards the Sangha did a legal procedure of reconciliation against the monk Sudhamma, ",
