--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1268,7 +1268,7 @@
   "pli-tv-kd11:31.1.142": "He shouldn’t order a regular monk in regard to an offense. ",
   "pli-tv-kd11:31.1.143": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:31.1.144": "He shouldn’t get permission from a regular monk to correct him. ",
-  "pli-tv-kd11:31.1.145": "He should not accuse a regular monk of an offense. ",
+  "pli-tv-kd11:31.1.145": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd11:31.1.146": "He should not remind a regular monk of an offense. ",
   "pli-tv-kd11:31.1.147": "He should not associate inappropriately with other monks.” ",
   "pli-tv-kd11:31.1.148": "The forty-three kinds of conduct in regard to the legal procedure of ejection for not making amends for an offense are finished. ",
