--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1289,7 +1289,7 @@
   "pli-tv-kd11:31.1.163.0": "6.5 The group of forty-three on not to be lifted ",
   "pli-tv-kd11:31.1.163.1": "“When a monk has five qualities, a legal procedure of ejecting him for not making amends for an offense shouldn’t be lifted: ",
   "pli-tv-kd11:31.1.164": "he gives the full ordination; he gives formal support; he has a novice monk attend on him; he accepts being appointed as an instructor of the nuns; he instructs the nuns, whether appointed or not. ",
-  "pli-tv-kd11:31.1.166": "When a monk has another five qualities, a procedure of ejecting him for not making amends for an offense should not be lifted: ",
+  "pli-tv-kd11:31.1.166": "When a monk has another five qualities, a procedure of ejecting him for not making amends for an offense shouldn’t be lifted: ",
   "pli-tv-kd11:31.1.167": "he commits the same offense for which the Sangha did the procedure of ejecting him for not making amends for an offense; he commits an offense similar to the one for which the Sangha did the procedure of ejecting him for not making amends for an offense; he commits an offense worse than the one for which the Sangha did the procedure of ejecting him for not making amends for an offense; ",
   "pli-tv-kd11:31.1.168": "he criticizes the procedure; he criticizes those who did the procedure. … ",
   "pli-tv-kd11:31.1.169": "he consents to a regular monk bowing down to him; he consents to a regular monk standing up for him; he consents to a regular monk raising his joined palms to him; he consents to a regular monk doing acts of respect toward him; he consents to a regular monk offering him a seat. … ",
