--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1480,8 +1480,8 @@
   "pli-tv-kd11:33.1.58.0": "7.4 The forty-three kinds of conduct ",
   "pli-tv-kd11:33.1.58.1": "“A monk who’s had a legal procedure of ejection for not giving up a bad view done against himself should conduct himself properly. ",
   "pli-tv-kd11:33.1.59": "This is the proper conduct: ",
-  "pli-tv-kd11:33.1.60": "He should not give the full ordination. ",
-  "pli-tv-kd11:33.1.61": "He should not give formal support. ",
+  "pli-tv-kd11:33.1.60": "He shouldn’t give the full ordination. ",
+  "pli-tv-kd11:33.1.61": "He shouldn’t give formal support. ",
   "pli-tv-kd11:33.1.62": "He should not have a novice monk attend on him. ",
   "pli-tv-kd11:33.1.63": "He should not accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:33.1.64": "Even if appointed, he should not instruct the nuns. ",
