--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1482,7 +1482,7 @@
   "pli-tv-kd11:33.1.59": "This is the proper conduct: ",
   "pli-tv-kd11:33.1.60": "He shouldn’t give the full ordination. ",
   "pli-tv-kd11:33.1.61": "He shouldn’t give formal support. ",
-  "pli-tv-kd11:33.1.62": "He should not have a novice monk attend on him. ",
+  "pli-tv-kd11:33.1.62": "He shouldn’t have a novice monk attend on him. ",
   "pli-tv-kd11:33.1.63": "He should not accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:33.1.64": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd11:33.1.65": "He should not commit the same offense for which the Sangha did the procedure of ejecting him for not giving up a bad view; ",
