--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -429,8 +429,8 @@
   "pli-tv-kd11:12.2.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:12.2.25": "The second section on the legal procedure of demotion is finished. ",
   "pli-tv-kd11:13.1.0": "3. The legal procedure of banishment ",
-  "pli-tv-kd11:13.1.1": "At one time Assaji and Punabbasuka were the resident monks at Kīṭāgiri. They were bad and shameless, ",
-  "pli-tv-kd11:13.1.2": "and were misbehaving in many ways. ",
+  "pli-tv-kd11:13.1.1": "At one time the bad and shameless monks Assaji and Punabbasuka were staying at Kīṭāgiri. ",
+  "pli-tv-kd11:13.1.2": "They were misbehaving in many ways. ",
   "pli-tv-kd11:13.1.3": "They planted flowering trees, watered and plucked them, and then tied the flowers together. They made the flowers into garlands, garlands with stalks on one side and garlands with stalks on both sides. They made flower arrangements, wreaths, ornaments for the head, ornaments for the ears, and ornaments for the chest. And they had others do the same. ",
   "pli-tv-kd11:13.1.4": "They then took these things, or sent them, to the women, the daughters, the girls, the daughters-in-law, and the female slaves of respectable families. ",
   "pli-tv-kd11:13.1.5": "They ate from the same plates as these women and drank from the same vessels. They sat on the same seats as them, and they lay down on the same beds, on the same sheets, under the same covers, both on the same sheets and under the same covers. They ate at the wrong time, drank alcohol, and wore garlands, perfumes, and cosmetics. They danced, sang, played instruments, and performed. ",
