--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -507,9 +507,9 @@
   "pli-tv-kd11:13.7.11": "These monks, Assaji and Punabbasuka, are corrupters of families and badly behaved. ",
   "pli-tv-kd11:13.7.12": "Their bad behavior is seen and heard about, ",
   "pli-tv-kd11:13.7.13": "and the families corrupted by them are seen and heard about. ",
-  "pli-tv-kd11:13.7.14": "The Sangha is doing a legal procedure of banishing them, ",
+  "pli-tv-kd11:13.7.14": "The Sangha does a legal procedure of banishing them, ",
   "pli-tv-kd11:13.7.15": "prohibiting the monks Assaji and Punabbasuka from staying at Kīṭāgiri. ",
-  "pli-tv-kd11:13.7.16": "Any monk who approves of doing a legal procedure of banishing them, prohibiting the monks Assaji and Punabbasuka from staying at Kīṭāgiri, should remain silent. ",
+  "pli-tv-kd11:13.7.16": "Any monk who approves of doing this legal procedure should remain silent. ",
   "pli-tv-kd11:13.7.17": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:13.7.18": "For the second time I speak on this matter … ",
   "pli-tv-kd11:13.7.19": "For the third time I speak on this matter. ",
