--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -614,7 +614,7 @@
   "pli-tv-kd11:15.1.21": "The eighteen kinds of conduct in regard to the legal procedure of banishment are finished. ",
   "pli-tv-kd11:16.1.1": "Soon afterwards a sangha of monks, headed by Sāriputta and Moggallāna, went to Kīṭāgiri and did the legal procedure of banishing the monks Assaji and Punabbasuka, ",
   "pli-tv-kd11:16.1.2": "prohibiting them from staying at Kīṭāgiri. ",
-  "pli-tv-kd11:16.1.3": "After the Sangha had done the procedure, those monks did not conduct themselves properly or suitably so as to deserve to be released, ",
+  "pli-tv-kd11:16.1.3": "Even so, they did not conduct themselves properly or suitably so as to deserve to be released, ",
   "pli-tv-kd11:16.1.4": "nor did they ask the monks for forgiveness. Instead they abused and reviled them, ",
   "pli-tv-kd11:16.1.5": "and they slandered them as acting from desire, ill will, confusion, and fear. ",
   "pli-tv-kd11:16.1.6": "And they left and they disrobed. ",
