--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -626,7 +626,7 @@
   "pli-tv-kd11:16.1.18": "“It’s true, Sir.” ",
   "pli-tv-kd11:16.1.19": "The Buddha rebuked them … ",
   "pli-tv-kd11:16.1.20": "“It’s not suitable … ",
-  "pli-tv-kd11:16.1.21": "How could these foolish men act in this way? ",
+  "pli-tv-kd11:16.1.21": "How can those foolish men act like this? ",
   "pli-tv-kd11:16.1.25": "This will affect people’s confidence …” ",
   "pli-tv-kd11:16.1.26": "After rebuking them … ",
   "pli-tv-kd11:16.1.27": "he gave a teaching and addressed the monks: ",
