--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -675,8 +675,8 @@
   "pli-tv-kd11:17.2.18": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:17.2.19": "The second section on the legal procedure of banishment is finished. ",
   "pli-tv-kd11:18.1.0": "4. The legal procedure of reconciliation ",
-  "pli-tv-kd11:18.1.1": "At one time Venerable Sudhamma was the resident monk at the householder Citta’s monastery at Macchikāsaṇḍa. He was in charge of the building work and received a regular supply of food. ",
-  "pli-tv-kd11:18.1.2": "When Citta wanted to invite the Sangha, a group of monks, or an individual monk, he would not do so without getting permission from Sudhamma. ",
+  "pli-tv-kd11:18.1.1": "At one time Venerable Sudhamma was the staying at the householder Citta’s monastery at Macchikāsaṇḍa. He was in charge of the building work and received a regular supply of food. ",
+  "pli-tv-kd11:18.1.2": "Whenever Citta wanted to invite the Sangha, a group of monks, or an individual monk, he would not do so without getting permission from Sudhamma. ",
   "pli-tv-kd11:18.1.3": "On one occasion a number of senior monks—Venerable Sāriputta, Venerable Mahāmoggallāna, Venerable Mahākaccāna, Venerable Mahākoṭṭhika, Venerable Mahākappina, Venerable Mahācunda, Venerable Anuruddha, Venerable Revata, Venerable Upāli, Venerable Ānanda, Venerable Rāhula—were wandering in Kāsī, when they arrived at Macchikāsaṇḍa. ",
   "pli-tv-kd11:18.1.4": "When Citta heard that they had arrived, ",
   "pli-tv-kd11:18.1.5": "he went to them, bowed, and sat down. ",
