--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -696,7 +696,7 @@
   "pli-tv-kd11:18.2.10": "and a third time, ",
   "pli-tv-kd11:18.2.12": "but got the same reply. ",
   "pli-tv-kd11:18.2.13": "He thought, ",
-  "pli-tv-kd11:18.2.14": "“What difference does it make to me whether Sudhamma accepts or not?” He then bowed down, circumambulated Sudhamma with his right side toward him, and left. ",
+  "pli-tv-kd11:18.2.14": "“What difference does it make to me whether Sudhamma accepts or not?” He then bowed, circumambulated Sudhamma with his right side toward him, and left. ",
   "pli-tv-kd11:18.3.1": "The following morning Citta prepared various kinds of fine food for the senior monks. ",
   "pli-tv-kd11:18.3.2": "Sudhamma thought, ",
   "pli-tv-kd11:18.3.3": "“Why don’t I go and see what Citta has prepared for the senior monks?” He then robed up, took his bowl and robe, and went to Citta’s house, where he sat down on the prepared seat. ",
