--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -752,9 +752,9 @@
   "pli-tv-kd11:18.6.15": "For the third time I speak on this matter. ",
   "pli-tv-kd11:18.6.16": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:18.6.17": "The monk Sudhamma has demeaned and insulted the householder Citta, who has faith and confidence, who’s a donor, benefactor, and supporter of the Sangha. ",
-  "pli-tv-kd11:18.6.18": "The Sangha is doing a legal procedure of reconciliation against the monk Sudhamma, ",
+  "pli-tv-kd11:18.6.18": "The Sangha does a legal procedure of reconciliation against the monk Sudhamma, ",
   "pli-tv-kd11:18.6.19": "instructing him to ask Citta for forgiveness. ",
-  "pli-tv-kd11:18.6.20": "Any monk who approves of doing a legal procedure of reconciliation against the monk Sudhamma, instructing him to ask Citta for forgiveness, should remain silent. ",
+  "pli-tv-kd11:18.6.20": "Any monk who approves of doing this legal procedure should remain silent. ",
   "pli-tv-kd11:18.6.21": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:18.6.22": "The Sangha has done the legal procedure of reconciliation against the monk Sudhamma, ",
   "pli-tv-kd11:18.6.23": "instructing him to ask Citta for forgiveness. ",
