--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -840,7 +840,7 @@
   "pli-tv-kd11:22.2.7": "This is the motion. ",
   "pli-tv-kd11:22.2.8": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:22.2.9": "The Sangha gives monk so-and-so to Sudhamma as a companion messenger to ask Citta for forgiveness. ",
-  "pli-tv-kd11:22.2.10": "Any monk who approves of giving monk so-and-so to Sudhamma as a companion messenger to ask Citta for forgiveness should remain silent. ",
+  "pli-tv-kd11:22.2.10": "Any monk who approves of this should remain silent. ",
   "pli-tv-kd11:22.2.11": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:22.2.12": "The Sangha has given monk so-and-so to Sudhamma as a companion messenger to ask Citta for forgiveness. ",
   "pli-tv-kd11:22.2.13": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
